<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/noRoom"
        android:title="@string/no_room"
        app:showAsAction="never"/>

    <item
        android:id="@+id/civilRoom"
        android:title="@string/civil_room"
        app:showAsAction="never"/>

    <item
        android:id="@+id/marineRoom"
        android:title="@string/marine_room"
        app:showAsAction="never"/>
    <item
        android:id="@+id/stateRoom"
        android:title="@string/state_room"
        app:showAsAction="never"/>
    <item
        android:id="@+id/offenseRoom"
        android:title="@string/offense_room"
        app:showAsAction="never"/>

    <item
        android:id="@+id/arretsRoom"
        android:title="@string/arrets_room"
        app:showAsAction="never"/>
</menu>