<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="8dp"
    android:backgroundTint="#efefef"
    android:layoutDirection="ltr"
    app:cardCornerRadius="16dp"
    app:cardElevation="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cLArretNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/cLArretSource"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleArretNumber"
                style="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arret_number_text"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textArretNumber"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textArretNumber"
                style="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/titleArretNumber"
                app:layout_constraintEnd_toStartOf="@+id/titleArretNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleArretNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cLArretSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/cLArretDate"
            app:layout_constraintEnd_toEndOf="@+id/cLArretNumber"
            app:layout_constraintTop_toBottomOf="@+id/cLArretNumber">

            <TextView
                android:id="@+id/titleArretSource"
                style="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arret_source_text"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textArretSource"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textArretSource"
                style="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/_space"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/titleArretSource"
                app:layout_constraintEnd_toStartOf="@+id/titleArretSource"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleArretSource" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cLArretDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cLArretSource"
            app:layout_constraintTop_toBottomOf="@+id/cLArretSource">

            <TextView
                android:id="@+id/titleArretDate"
                style="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arret_date_text"
                android:textColor="@color/purple_700"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textArretDate"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textArretDate"
                style="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/titleArretDate"
                app:layout_constraintEnd_toStartOf="@+id/titleArretDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleArretDate" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/archivedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/favarret"
            android:layout_marginLeft="10dp"
            tools:ignore="ContentDescription" />


        <!--    <LinearLayout-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_margin="30dp"-->
        <!--        android:orientation="vertical"-->
        <!--        app:layout_constraintEnd_toEndOf="parent">-->

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center_vertical"-->
        <!--            android:orientation="horizontal">-->


        <!--            <TextView-->
        <!--                style="bold"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="القرار رقم:     "-->
        <!--                android:textColor="@color/black"-->
        <!--                android:textSize="10dp" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/t_num"-->
        <!--                style="bold"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:textColor="@color/black"-->
        <!--                android:textSize="10dp" />-->

        <!--        </LinearLayout>-->

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center_vertical"-->
        <!--            android:orientation="horizontal">-->

        <!--            <TextView-->
        <!--                style="bold"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="الصادر عن:     "-->
        <!--                android:textColor="@color/black"-->
        <!--                android:textSize="10dp" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/t_source"-->
        <!--                style="bold"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:textColor="@color/black"-->
        <!--                android:textSize="10dp" />-->
        <!--        </LinearLayout>-->

        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center_vertical"-->
        <!--            android:orientation="horizontal">-->

        <!--            <TextView-->
        <!--                style="bold"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:text="بتاريخ:     "-->
        <!--                android:textColor="@color/black"-->
        <!--                android:textSize="10dp" />-->

        <!--            <TextView-->
        <!--                android:id="@+id/t_date"-->
        <!--                style="bold"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:textColor="@color/black"-->
        <!--                android:textSize="10dp" />-->

        <!--        </LinearLayout>-->


        <!--    </LinearLayout>-->
        <!--    -->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

